fixes
added scrollbar, create-new-channel btn, leave-channel btn, fixed drawers

--- a/slack/src/css/app.scss
+++ b/slack/src/css/app.scss
@@ -18,3 +18,16 @@
   box-shadow: 0 0px 8px var(--q-secondary), 0 2px 2px rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 12%) !important;
   background: var(--q-secondary);
 }
+
+::-webkit-scrollbar {
+  width: 7px;
+}
+::-webkit-scrollbar-track {
+  background: var(--q-dark); 
+}
+::-webkit-scrollbar-thumb {
+  // background: $secondary;
+  background: rgba(63, 63, 63, 0.867);
+  border-radius: 5px;
+  cursor:pointer;
+}
